# 2-Xornado

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_arch  LICENSE  README.md  docker_2xnf_solver  docker_2xornado  docker_solve.sh
src/: CMakeLists.txt  impl_graph.cpp  impl_graph.hpp  main.cpp  misc.hpp  solve.cpp  solve.hpp
src/LA/: lineqs.cpp  lineqs.hpp  lineral.cpp  lineral.hpp
src/argparse/: argparse.hpp
src/graph/: graph.hpp  graph_al.cpp  graph_al.hpp  graph_lhgr.cpp  graph_lhgr.hpp
src/vl/: vl.hpp  vl_hmap.cpp  vl_hmap.hpp  vl_trie.cpp  vl_trie.hpp
tests/: benchmark.cpp  test_graph.cpp  test_impl_graph.cpp  test_solve.cpp  test_trie.cpp  test_xlit.cpp  test_xsys.cpp
tests/2xnfs/: ToyExample-type1-n10-seed0.xnf  ToyExample-type1-n10-seed1.xnf  ToyExample-type1-n15-seed0.xnf  ToyExample-type1-n15-seed1.xnf  ToyExample-type1-n15-seed2.xnf  ToyExample-type1-n15-seed3.xnf  ToyExample-type1-n15-seed4.xnf  ToyExample-type1-n20-seed0.xnf  flat30-100.xnf  rand-10-20.xnf  rand-10-20_2.xnf  rand-10-30.xnf  rand-20-40.xnf  rand-20-60.xnf  rand-3-6.xnf  rand-30-90.xnf  rand-40-120.xnf  rand-40-120_1.xnf  rand-40-80.xnf  rand-40-80_2.xnf  rand-40-80_3.xnf  rand-40-80_4.xnf  rand-5-10.xnf  rand-80-160.xnf  test0.xnf  test1.xnf  test10.xnf  test11.xnf  test12.xnf  test13.xnf  test14.xnf  test15.xnf  test16.xnf  test17.xnf  test18.xnf  test19.xnf  test2.xnf  test20.xnf  test21.xnf  test22.xnf  (+57 more)
